# darling

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
src/: gist.rs  github.rs  main.rs  model.rs
src/dto/: login.rs
template/: homepage.html  login.html  note.html
