[package]
name = "darling"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
sqlx = "0.3.4"
tera = "1.2.0"
tracing = "0.1.13"
actix-rt = "1.1.0"
surf = "1.0.3"
serde = "1.0.106"
toml = "0.5.6"
actix-identity = "0.2.1"
rand = "0.7.3"
chrono = {version="0.4.11", features = ["serde"]}
