[package]
name = "darling"
version = "0.2.1"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.8.0"
pilot = { version="0.0.7" }
reqwest = { version = "0.11.4", features = ["default", "json"] }
serde = { version = "1.0.126", features = ["serde_derive"] }
tokio = { version = "1.9.0", features = ["full"] }
